--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Quicksand:wght@400;600&display=swap');
+
 @import 'tailwindcss';
+
 
 @plugin 'tailwindcss-animate';
 
